infra/k8s/dev/game-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-mongo
  template:
    metadata:
      labels:
        app: game-mongo
    spec:
      containers:
        - name: game-mongo
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: game-mongo-svc
spec:
  selector:
    app: game-mongo
  ports:
    - name: game-mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
