infra/k8s/dev/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: summerinfo-word.dev
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-svc
                port:
                  number: 3000
          - path: /api/game/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: game-svc
                port:
                  number: 3000
